--- a/views/source_content_list.ejs
+++ b/views/source_content_list.ejs
@@ -1,7 +1,8 @@
 <h1><%=total%> Sources</h1>
 <div>
     <div>
-    <%if(previous){%>
+        <div style="float:left; margin-right: 20px"><a href="/sourcecontent/list?start=0">Home</a></div>
+    <%if(previous>=0){%>
     <div style="float:left; margin-right: 20px"><a href="/sourcecontent/list?start=<%=previous%>">Previous</a></div>
     <%}%>
     <div style="float:left"><a href="/sourcecontent/list?start=<%=start%>">Next</a></div>
