add/view tweeters

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,8 @@
 <html>
 <body>
 <a href="/logout">logout</a>
+<a href="/sourcecontent/list">Sources</a>
+<a href="/tweeters/list">Tweeters</a>
 <%- body %>
 </body>
 </html>
