--- a/views/tweeter_show.ejs
+++ b/views/tweeter_show.ejs
@@ -13,6 +13,9 @@
             <li style="margin-bottom: 5px">
                             <label>Screen Name</label> <%=tweeter._doc['screen_name']%>
             </li>
+            <li style="margin-bottom: 5px">
+                                        <label>Description</label> <%=tweeter._doc['desscription']%>
+                        </li>
             <% for(var field in tweeter._doc){%>
             <li style="margin-bottom: 5px">
                 <label><%=field%></label> <%=tweeter._doc[field]%>
