adding articles browser

--- a/views/article_list.ejs
+++ b/views/article_list.ejs
@@ -1,7 +1,6 @@
-<h1> Articles (<%=total%>)</h1>
 <div>
     <div>
-        <h2>Article List</h2>
+        <h2>Article List  (<%=total%>)</h2>
         <%if(previous>=0){%>
         <div style="float:left; margin-right: 20px"><a href="/articles/list?start=<%=previous%>">Previous</a></div>
         <%}%>
