--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,7 @@
 <html>
 <body>
 <a href="/logout">logout</a>
+<a href="/articles/list">Articles</a>
 <a href="/sourcecontent/list">Sources</a>
 <a href="/tweeters/list">Tweeters</a>
 <%- body %>
