adding pubs, cleaning up routes

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,10 @@
 <html>
+<head>
+    <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
+</head>
 <body>
 <a href="/logout">logout</a>
+<a href="/publications/list">Publications</a>
 <a href="/articles/list">Articles</a>
 <a href="/sourcecontent/list">Sources</a>
 <a href="/tweeters/list">Tweeters</a>
