--- a/views/tweeters/tweeter_show.ejs
+++ b/views/tweeters/tweeter_show.ejs
@@ -14,7 +14,7 @@
                             <label>Screen Name</label> <%=tweeter._doc['screen_name']%>
             </li>
             <li style="margin-bottom: 5px">
-                                        <label>Description</label> <%=tweeter._doc['desscription']%>
+                                        <label>Description</label> <%=tweeter._doc['description']%>
                         </li>
             <% for(var field in tweeter._doc){%>
             <li style="margin-bottom: 5px">
