--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,21 @@
+.show_list {
+    list-style: none
+}
 .show_list li {
     700px;
     margin-bottom: 15px
 }
 
 .show_list li label {
-    width: 200px;
+    width: 300px;
     float: left;
     background-color: #d3d3d3;
     margin-right: 10px;
     font-weight: bolder;
+}
+
+.form_list {
+    list-style: none
 }
 
 .form_list li {
@@ -25,6 +32,11 @@
 }
 
 .form_list li textarea {
+    width: 300px;
+    height: 150px;
+}
+
+.form_list li select {
     width: 300px;
     height: 150px;
 }
