--- a/views/publications/publications_list.ejs
+++ b/views/publications/publications_list.ejs
@@ -1,6 +1,7 @@
 <div>
     <div>
         <h2>Publication List</h2>
+        <div style="float:left; margin-right: 20px"><a href="/publications/list?start=0">Home</a></div>
         <%if(previous>=0){%>
         <div style="float:left; margin-right: 20px"><a href="/publications/list?start=<%=previous%>">Previous</a></div>
         <%}%>
