tweeters have publications, can be editted

--- a/views/articles/article_list.ejs
+++ b/views/articles/article_list.ejs
@@ -1,6 +1,7 @@
 <div>
     <div>
         <h2>Article List  (<%=total%>)</h2>
+        <div>Showing 20 of <%=total%></div>
         <%if(previous>=0){%>
         <div style="float:left; margin-right: 20px"><a href="/articles/list?start=<%=previous%>">Previous</a></div>
         <%}%>
