--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
+    <script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
 </head>
 <body>
 <a href="/logout">logout</a>
