--- a/views/publications/publications_show.ejs
+++ b/views/publications/publications_show.ejs
@@ -22,7 +22,7 @@
             <li style="margin-bottom: 5px">
                 <label>White List Status</label>
                 <% for(var statusName in schemas.PublicationWhiteListStatus){
-                    if(schemas.PublicationWhiteListStatus[statusName]==publication.whist_list_status){%>
+                    if(schemas.PublicationWhiteListStatus[statusName]==publication.white_list_status){%>
                         <%=statusName%>
                     <%}
                     }
