Adding expertis editor

--- a/views/expertises/expertise_edit_panel.ejs
+++ b/views/expertises/expertise_edit_panel.ejs
@@ -1,17 +1,22 @@
-<ul  class="form_list">
-    <li><label></label><input name="child_expertise_name" id="child_expertise_name"/> <button class="add_child_expertise_button" id="add_child_expertise_<%=expertise._id%>">Add Child Expertise</button></li>
-             <li><label>Name</label><input name="name"  value="<%=expertise.name||''%>"/></li>
-             <li><label>Description</label><textarea name="description" ><%=expertise.description||''%></textarea></li>
+<ul  class="form_list" style="display: inline-block;">
 
-
+             <li><label>Name</label><input name="name" id="expertise_name" value="<%=expertise.name||''%>"/></li>
              <li>
                  <label>Tweeters</label>
                  <select multiple>
 
                  </select>
              </li>
+            <div class="expertise_id" id="expertise_id_<%=expertise._id%>"></div>
     <li>
-        <button  style="margin-left: 100px;" id="update_expertise">Save</button>
+                <label>Add Expertise</label>
+                <input name="child_expertise_name" id="child_expertise_name"/>
+                <button class="add_child_expertise_button" id="add_child_expertise_<%=expertise._id%>">Add Child Expertise</button>
+
+        </li>
+    <li style="padding-left: 400px; border-top: 1px solid;">
+        <button id="update_expertise">Save</button>
+        <button id="delete_expertise">Delete</button>
     </li>
 
     </ul>
