--- a/views/expertises/expertise_node.ejs
+++ b/views/expertises/expertise_node.ejs
@@ -1,13 +1,14 @@
 
     <%for(var e=0;e<expertises.length;e++){%>
-        <li id="expertise_node_<%=expertises[e]._id%>" class="expertise_node">
-            <span class="folder"><%=expertises[e].name%></span>
-            <%if(typeof expertises[e].children!='undefined'){%>
-                <%if(expertises[e].children.length>0){%>
+        <li>
+            <span class="folder expertise_node" ><a href="#" class="expertise_node_lnk" id="expertise_node_<%=expertises[e]._id%>"><%=expertises[e].name%></a></span>
+            <%if(typeof expertises[e].populatedChildren!='undefined'){%>
+                <%if(expertises[e].populatedChildren.length>0){%>
                     <ul>
-                        <%-partial('expertise_node.ejs',{expertises:expertises[e].children})%>
+                        <%-partial('expertise_node.ejs',{expertises:expertises[e].populatedChildren})%>
                     </ul>
                 <%}%>
             <%}%>
+
         </li>
     <%}%>
