--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,13 @@
 <html>
 <head>
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="/css/jquery.treeview.css"/>
+    <link rel="stylesheet" href="/css/screen.css" />
     <script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
+    <script src="/js/jquery.treeview.js" type="text/javascript"></script>
+    <script src="/js/jquery.treeview.edit.js" type="text/javascript"></script>
+
+
 </head>
 <body>
 <a href="/logout">logout</a>
@@ -9,6 +15,7 @@
 <a href="/articles/list">Articles</a>
 <a href="/sourcecontent/list">Sources</a>
 <a href="/tweeters/list">Tweeters</a>
+<a href="/expertises/list">Expertise</a>
 <%- body %>
 </body>
 </html>
