--- a/views/expertises/expertise_tree.ejs
+++ b/views/expertises/expertise_tree.ejs
@@ -1,3 +1,3 @@
-<ul id="browser" class="filetree">
+<ul id="browser" class="filetree treeview-famfamfam">
     <%-partial('expertise_node',{expertises:expertises})%>
 </ul>
