--- a/views/sourceContents/source_content_list.ejs
+++ b/views/sourceContents/source_content_list.ejs
@@ -1,5 +1,5 @@
 <h1> Sources</h1>
-<div>Showing 20 of <%=total%></div>
+<div>Showing <%=start-20%> to <%= start%> of <%=total%></div>
 <div>
     <div>
     <%if(previous>=0){%>
